// Vitest Snapshot v1

exports[`render correctly > input 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render correctly > input 2`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render correctly > input 3`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested ::: code correctly 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
<pre><code class=\\"language-js\\">const foo = ':::';
</code></pre>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested block correctly > input 1`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
<div class=\\"tip\\">
<p>Tip</p>
</div>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested block correctly > input 2`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
<div class=\\"tip\\">
<p>Tip</p>
</div>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>:::</p>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;C&quot;\\">
<p>c</p>
</PluginTabsTab>
</PluginTabs>
"
`;

exports[`render tab with nested block correctly > input 3`] = `
"<PluginTabs >
<PluginTabsTab label=\\"Tab &quot;A&quot;\\">
<p>a</p>
<div class=\\"tip\\">
<p>Tip
== t</p>
</div>
</PluginTabsTab>
<PluginTabsTab label=\\"Tab &quot;B&quot;\\">
<p>b</p>
</PluginTabsTab>
</PluginTabs>
"
`;
